--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cadence": "http-server cadencetest -p 3000 -c-1 -o -s",
     "michael": "http-server michaelTest -p 3000 -c-1 -o -s",
     "milestone-02": "http-server src/client -p 3000 -c-1 -o -s",
+    "milestone-03": "node src/server/server.js",
     "gpt": "http-server gpt_testst -p 3000 -c-1 -o -s",
     "validate-html": "html-validate 'src/**/*.html'",
     "server": "node src/server/server.js",
