--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "cadence": "http-server cadencetest -p 3000 -c-1 -o -s",
     "michael": "http-server michaelTest -p 3000 -c-1 -o -s",
     "milestone-02": "http-server src/client -p 3000 -c-1 -o -s",
-    "milestone-03": "open http://localhost:3260 && node src/server/server.js",
+    "milestone-03": "simple-open-url http://localhost:3260 && node src/server/server.js",
     "kill-this": "kill -9 $(lsof -t -i :3260)",
     "gpt": "http-server gpt_testst -p 3000 -c-1 -o -s",
     "validate-html": "html-validate 'src/**/*.html'",
